--- a/src/main/resources/locale/en.lang
+++ b/src/main/resources/locale/en.lang
@@ -9,7 +9,7 @@ batmounttip=Summon a bat that you can ride and gives you night vision.
 batmounttip2=Press [input=trinketability] to toggle night vision.
 spidermounttip=Summon a mountable spider that also grants you +10 summons for your spider staff.
 crocodilemounttip=Summon a mountable crocodile that is faster in water than on land.
-polarbearmounttip=Summon a mountable polar bear that stomps on your enemies.
+polarbearmounttip=Summon a mountable polar bear that gives you +50 max health while riding.
 
 [mob]
 batmount=Bat
